--- a/src/content/other/about.mdx
+++ b/src/content/other/about.mdx
@@ -1,4 +1,4 @@
-Hi, I'm Duplicake. My real name is Magnus and I'm a very young programmer.
+Hi, I'm Duplicake. My real name is Magnus and I'm a young programmer.
 I like: Google Pixels, Programming, Firefox, Selfhosting, Obsidian, Steam, Bluesky, and Linux (Fedora on my main, Debian on my server, and Arch on my low spec computer).
 I dislike: Skids, Apple, Windows, Google (to some extent), X (especially), and TikTok.
 
