updated arboralert page

--- a/src/content/projects/arboralert.mdx
+++ b/src/content/projects/arboralert.mdx
@@ -14,7 +14,7 @@ info:
 ArborAlert! is an open source discord bot that tracks and notifies you to do your homework by scraping the Arbor website with selenium.
 
 I decided to make it after I forgot to do my homework and my friends told me they had the same issue.
-It's currently exclusive to my school's discord server, but I plan to make it public and open source soon.
+It's licensed under MIT and selfhostable.
 
 ## Features
 
