--- a/src/content/projects/arboralert.mdx
+++ b/src/content/projects/arboralert.mdx
@@ -21,6 +21,6 @@ It's licensed under MIT and selfhostable.
 - Fast 
 - Written in Python
 - Stores credentials in an encrypted database
-- Easy to use - even a 10 year old (starting secondary school) can use it
+- Easy to use
 
 To view details, please go here: https://share.note.sx/87v38x68#2g97jE8bKxs0sCyP7VADcB1Mxw1C+fTIPo6TaT37sos
