--- a/src/content/projects/pocketpal.mdx
+++ b/src/content/projects/pocketpal.mdx
@@ -8,7 +8,7 @@ info:
     link: https://futurotechnologies.dev
     icon:
       type: lucide
-      name: website
+      name: globe
 ---
 
 PocketPal will be a PDA type thing that helps you with school. The logo isn't perfected, and the website isn't up yet.
