updated pocketpal url

--- a/src/content/projects/pocketpal.mdx
+++ b/src/content/projects/pocketpal.mdx
@@ -5,7 +5,7 @@ description: PocketPal is a mini pda like device that helps you with school
 image: ../assets/pocketpal.png
 info:
   - text: Website
-    link: https://futurotechnologies.dev
+    link: https://futuratechnologies.dev
     icon:
       type: lucide
       name: globe
