--- a/src/content/posts/anti-trump.mdx
+++ b/src/content/posts/anti-trump.mdx
@@ -3,7 +3,7 @@ title: "Here's why I hate Trump"
 description: "My rant with sources about why I hate Trump"
 image: "../assets/anti-trump.png"
 createdAt: 02-10-2025
-draft: true
+draft: false
 tags:
   - my-thoughts
 ---
