--- a/src/content/other/about.mdx
+++ b/src/content/other/about.mdx
@@ -5,7 +5,8 @@ I dislike: Skids, Apple, Windows, Google (to some extent), X (especially), and T
 I know: JS, HTML, CSS and Python.
 I'm learning: Rust, Gleam and Astro.
 
-It isn't in my socials but I have 2 unused accounts. The one on Twitter: https://x.com/malwarebytes95 and the one on Mastodon: https://mastodon.social/@duplicake 
+It isn't in my socials but I have 2 unused accounts. The one on Twitter: https://x.com/malwarebytes95 and the one on Mastodon: https://mastodon.social/@duplicake.
+The contributions you see on my github are barely any because I do most of my development on a self hosted forgejo instance.
 
 This website contains privacy focused analytics powered by umami. It is open source and powered by Astro! Check out the code here: https://github.com/SomeRandomCpu/website
 Uptime monitor: https://status.duplicake.fyi/
