--- a/src/content/other/about.mdx
+++ b/src/content/other/about.mdx
@@ -1,9 +1,8 @@
 Hi, I'm Duplicake. My real name is Magnus and I'm a young programmer.
 I like: Google Pixels, Programming, Firefox, Selfhosting, Obsidian, Steam, Bluesky, and Linux (Fedora on my main, Debian on my server, and Arch on my low spec computer).
-I dislike: Skids, Apple, Windows, Google (to some extent), X (especially), and TikTok.
+I dislike: Skids, Apple, Windows, Google (to some extent), and X (especially).
 
-I know: JS, HTML, CSS and Python.
-I'm learning: Rust, Gleam and Astro.
+I know: A lot of programming languages (this site will be remade with something I make by myself instead of a template soon, so not listing them).
 
 It isn't in my socials but I have 2 unused accounts. The one on Twitter: https://x.com/malwarebytes95 and the one on Mastodon: https://mastodon.social/@duplicake.
 The contributions you see on my github are barely any because I do most of my development on a self hosted forgejo instance.
