update blog post

--- a/src/content/posts/new-math-formula.mdx
+++ b/src/content/posts/new-math-formula.mdx
@@ -53,6 +53,7 @@ Suppose you want to compute `a × b`.
 - Total = `3,304,272`
 - Divide by 4 → **826,068**
 
+### How I found this and some thoughts
 I actually stumbled on this while I was messing around with a calculator and trying to find “shortcuts” for doing things in my head. I noticed that whenever two numbers were close together, the product seemed to connect really nicely to their average squared, with just a tiny adjustment.
 At first I was just doing it with easy pairs like `98 × 102` (which is basically `100² - 2²`), but then I wondered if I could generalize it to *any* pair of numbers. After scribbling on paper for a while (and making a few mistakes 😅), I realized I could always jump to a nearby “easy square” like `1000²` or `2000²`, then just correct it with those little offset and gap terms.
 What really surprised me is how *fast* it feels in practice — like you’re just doing one big square you already know, then some much smaller corrections, and finally halving twice. It almost feels like cheating when the numbers line up nicely.
