--- a/src/content/posts/hacking-playroom.mdx
+++ b/src/content/posts/hacking-playroom.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Playroom/Little Umbrella are completely broken"
+title: "Security report: Playroom/Little Umbrella are completely broken"
 description: "Oh no, it happened again"
 image: "../assets/playroom.png"
 createdAt: 08-24-2025
