--- a/src/content/posts/new-math-formula.mdx
+++ b/src/content/posts/new-math-formula.mdx
@@ -1,5 +1,5 @@
 ---
-title: "I think I just found a new way to do large multiplications easily"
+title: "Research: I think I just found a new way to do large multiplications easily"
 description: "Wait, what?"
 image: "../assets/math.png"
 createdAt: 08-19-2025
@@ -7,6 +7,7 @@ draft: false
 tags:
   - math
   - discovery
+  - research
 ---
 
 ### The Idea
