--- a/src/content/posts/hacking-playroom.mdx
+++ b/src/content/posts/hacking-playroom.mdx
@@ -55,18 +55,9 @@ And as expected, all of them worked. I could use their AWS key to access their S
 It also contained a bunch of assets from the last show. I looked inside the folder and in every folder there was a .DS_Store file 🤣🤣🤣.
 
 Excuse me, what are you doing here playroom/little umbrella. Putting API keys client side AND commiting .DS_Store file is a programming sin.
-I just let them know in the channel, and they really didn't seem botherted. I don't know if they even know how serious this is.
+I just let them know in the channel, and they really didn't seem bothered. I don't know if they even know how serious this is.
 
-Anyway, I continued looking (oh and I figured out a way to hack the last show but that's not very interesting).
-
-### Playroom Dev Website
-
-Next up was the Playroom dev website. This is the website where all the developers manage their games powered by Playroom.
-I noticed they were using a pretty old version of Next.js
-
-
-
-
+Anyway, I finished looking (oh and I figured out a way to hack the last show but that's not very interesting).
 
 ### Conclusion
 
